spellcheck - adding a placeholder link for raw text

--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -21,7 +21,9 @@
 
     <section class="entry-markdown active">
         <header class="floatingheader">
-            <small>Markdown</small>
+            <small>Markdown</small> 
+            /
+            <a href="#"><small>RAW TEXT</small></a> 
             <a class="markdown-help" href="#"><span class="hidden">What is Markdown?</span></a>
         </header>
         <section id="entry-markdown-content" class="entry-markdown-content" data-filestorage={{file_storage}}>
