--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -21,13 +21,13 @@
 
     <section class="entry-markdown active">
         <header class="floatingheader">
-            <small>Markdown</small> 
+            <small id="markdown-editor-mode" style="color:black">Markdown</small> 
             /
-            <a href="#"><small>RAW TEXT</small></a> 
+            <a id="rawtext-editor-mode" href="#"><small>RAW TEXT</small></a> 
             <a class="markdown-help" href="#"><span class="hidden">What is Markdown?</span></a>
         </header>
         <section id="entry-markdown-content" class="entry-markdown-content" data-filestorage={{file_storage}}>
-            <textarea id="entry-markdown"></textarea>
+            <textarea id="entry-markdown" class="markdown-mode"></textarea>
         </section>
     </section>{{!.entry-markdown}}
 
