spellcheck - changes from laptop - before testing

--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -27,7 +27,7 @@
             <a class="markdown-help" href="#"><span class="hidden">What is Markdown?</span></a>
         </header>
         <section id="entry-markdown-content" class="entry-markdown-content" data-filestorage={{file_storage}}>
-            <textarea id="entry-markdown" class="markdown-mode"></textarea>
+            <textarea id="entry-markdown" class="markdown-mode"></textarea> <!-- default mode is markdown-mode -->
         </section>
     </section>{{!.entry-markdown}}
 
